--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ header{
     background-position: center;
 }
 
-header ::after {
+/* header ::after {
     content: "";
     width: 100%;
     height: 100%;
@@ -32,7 +32,7 @@ header ::after {
     top: 0;
     left: 0;
     z-index: -1;
-}
+} */
 
 .right{
     display: flex;
