--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ header{
     background-position: center;
 }
 
-/* header ::after {
+header ::after {
     content: "";
     width: 100%;
     height: 100%;
@@ -32,14 +32,13 @@ header{
     top: 0;
     left: 0;
     z-index: -1;
-} */
+}
 
 .right{
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    /* gap: 70px; */
     height: 100%;
     padding: 20px;
     position: relative;
@@ -58,7 +57,7 @@ header{
 .headertext{
     padding: 10px;
     text-align: center;
-    color: rgb(218, 204, 204);
+    color: rgb(71, 68, 68);
 }
 
 .headertext h1{
