--- a/styles.css
+++ b/styles.css
@@ -108,12 +108,12 @@ button{
 }
 
 .section2 .video{
-    border: solid #F7DCD5 20px;
+    border: solid white 5px;
     margin-top: 20px;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    height: 400px;
+    /* height: 400px; */
 }
 
 .section2 .video video{
