--- a/styles.css
+++ b/styles.css
@@ -116,11 +116,11 @@ button{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    height: 400px;
+    /* height: 400px; */
 }
 
 .section2 .video video{
-    height: fit-content;
+    /* height: fit-content; */
 }
 
 .section2 .text{
@@ -154,4 +154,7 @@ footer{
 footer p{
 font-size: small;
 color: rgb(59, 57, 57);
+}
+@media screen and (min-width: 768px) {
+    
 }
