--- a/styles.css
+++ b/styles.css
@@ -65,11 +65,11 @@ header ::after {
 
 .headertext h1{
     font-size: 40px;
+    color: #000;
 }
 
 .headertext h3{
     font-size: 20px;
-    color: rgb(59, 57, 57);
     text-align: center;
 
 }
@@ -92,6 +92,7 @@ button{
     width: 150px;
     height: 50px;
     color: white;
+    font-weight: bold;
     cursor: pointer;
 
 }
@@ -151,5 +152,9 @@ font-size: small;
 color: rgb(59, 57, 57);
 }
 @media screen and (min-width: 768px) {
+    .headertext h3{
+        font-size: 25px;
+        text-align: center;
     
+    }
 }
